--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="promo__content">
                 <div class="promo__info">
                     <h1 class="promo__title">THE BRAND</h1>
-                    <h2 class="promo__heading">OF LUXERIOUS FASHION</h2>
+                    <h2 class="promo__heading">OF LUXERIOUS <span class="my-text-pink">FASHION</span></h2>
                 </div>
             </div>
         </section>
@@ -266,7 +266,7 @@
         </section>
 
         <footer class="my-footer my-center">
-            <p>© 2024 Brand All Rights Reserved.</p>
+            <p>© 2021 Brand All Rights Reserved.</p>
             <nav class="my-socials-block">
 
                 <a class="my-social" href="https://facebook.com">
